// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiProgress color #885522 is rendered 1`] = `
<div
  class="ouiProgress ouiProgress--indeterminate ouiProgress--m ouiProgress--customColor"
  style="color:#885522"
/>
`;

exports[`OuiProgress color accent is rendered 1`] = `
<div
  class="ouiProgress ouiProgress--indeterminate ouiProgress--m ouiProgress--accent"
/>
`;

exports[`OuiProgress color danger is rendered 1`] = `
<div
  class="ouiProgress ouiProgress--indeterminate ouiProgress--m ouiProgress--danger"
/>
`;

exports[`OuiProgress color primary is rendered 1`] = `
<div
  class="ouiProgress ouiProgress--indeterminate ouiProgress--m ouiProgress--primary"
/>
`;

exports[`OuiProgress color secondary is rendered 1`] = `
<div
  class="ouiProgress ouiProgress--indeterminate ouiProgress--m ouiProgress--secondary"
/>
`;

exports[`OuiProgress color subdued is rendered 1`] = `
<div
  class="ouiProgress ouiProgress--indeterminate ouiProgress--m ouiProgress--subdued"
/>
`;

exports[`OuiProgress color success is rendered 1`] = `
<div
  class="ouiProgress ouiProgress--indeterminate ouiProgress--m ouiProgress--success"
/>
`;

exports[`OuiProgress color vis0 is rendered 1`] = `
<div
  class="ouiProgress ouiProgress--indeterminate ouiProgress--m ouiProgress--vis0"
/>
`;

exports[`OuiProgress color vis1 is rendered 1`] = `
<div
  class="ouiProgress ouiProgress--indeterminate ouiProgress--m ouiProgress--vis1"
/>
`;

exports[`OuiProgress color vis2 is rendered 1`] = `
<div
  class="ouiProgress ouiProgress--indeterminate ouiProgress--m ouiProgress--vis2"
/>
`;

exports[`OuiProgress color vis3 is rendered 1`] = `
<div
  class="ouiProgress ouiProgress--indeterminate ouiProgress--m ouiProgress--vis3"
/>
`;

exports[`OuiProgress color vis4 is rendered 1`] = `
<div
  class="ouiProgress ouiProgress--indeterminate ouiProgress--m ouiProgress--vis4"
/>
`;

exports[`OuiProgress color vis5 is rendered 1`] = `
<div
  class="ouiProgress ouiProgress--indeterminate ouiProgress--m ouiProgress--vis5"
/>
`;

exports[`OuiProgress color vis6 is rendered 1`] = `
<div
  class="ouiProgress ouiProgress--indeterminate ouiProgress--m ouiProgress--vis6"
/>
`;

exports[`OuiProgress color vis7 is rendered 1`] = `
<div
  class="ouiProgress ouiProgress--indeterminate ouiProgress--m ouiProgress--vis7"
/>
`;

exports[`OuiProgress color vis8 is rendered 1`] = `
<div
  class="ouiProgress ouiProgress--indeterminate ouiProgress--m ouiProgress--vis8"
/>
`;

exports[`OuiProgress color vis9 is rendered 1`] = `
<div
  class="ouiProgress ouiProgress--indeterminate ouiProgress--m ouiProgress--vis9"
/>
`;

exports[`OuiProgress color warning is rendered 1`] = `
<div
  class="ouiProgress ouiProgress--indeterminate ouiProgress--m ouiProgress--warning"
/>
`;

exports[`OuiProgress has labelProps 1`] = `
Array [
  <div
    class="ouiProgress__data ouiProgress__data--success"
  >
    <span
      class="ouiProgress__valueText"
    >
      150
    </span>
  </div>,
  <progress
    aria-hidden="false"
    aria-label="aria-label"
    class="ouiProgress ouiProgress--native ouiProgress--m ouiProgress--success testClass1 testClass2"
    data-test-subj="test subject string"
    max="100"
    value="50"
  />,
]
`;

exports[`OuiProgress has max 1`] = `
<progress
  aria-hidden="false"
  aria-label="aria-label"
  class="ouiProgress ouiProgress--native ouiProgress--m ouiProgress--success testClass1 testClass2"
  data-test-subj="test subject string"
  max="100"
/>
`;

exports[`OuiProgress has value 1`] = `
<div
  aria-label="aria-label"
  class="ouiProgress ouiProgress--indeterminate ouiProgress--m ouiProgress--success testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`OuiProgress has valueText and label 1`] = `
Array [
  <div
    class="ouiProgress__data ouiProgress__data--success"
  >
    <span
      class="ouiProgress__label"
    >
      Label
    </span>
    <span
      class="ouiProgress__valueText"
    >
      150
    </span>
  </div>,
  <progress
    aria-hidden="true"
    aria-label="aria-label"
    class="ouiProgress ouiProgress--native ouiProgress--m ouiProgress--success testClass1 testClass2"
    data-test-subj="test subject string"
    max="100"
    value="50"
  />,
]
`;

exports[`OuiProgress is determinate 1`] = `
<progress
  aria-hidden="false"
  aria-label="aria-label"
  class="ouiProgress ouiProgress--native ouiProgress--m ouiProgress--success testClass1 testClass2"
  data-test-subj="test subject string"
  max="100"
  value="50"
/>
`;

exports[`OuiProgress is indeterminate 1`] = `
<div
  aria-label="aria-label"
  class="ouiProgress ouiProgress--indeterminate ouiProgress--m ouiProgress--success testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`OuiProgress is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiProgress ouiProgress--indeterminate ouiProgress--m ouiProgress--success testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`OuiProgress size l is rendered 1`] = `
<div
  class="ouiProgress ouiProgress--indeterminate ouiProgress--l ouiProgress--success"
/>
`;

exports[`OuiProgress size m is rendered 1`] = `
<div
  class="ouiProgress ouiProgress--indeterminate ouiProgress--m ouiProgress--success"
/>
`;

exports[`OuiProgress size s is rendered 1`] = `
<div
  class="ouiProgress ouiProgress--indeterminate ouiProgress--s ouiProgress--success"
/>
`;

exports[`OuiProgress size xs is rendered 1`] = `
<div
  class="ouiProgress ouiProgress--indeterminate ouiProgress--xs ouiProgress--success"
/>
`;

exports[`OuiProgress valueText is true 1`] = `
Array [
  <div
    class="ouiProgress__data ouiProgress__data--success"
  >
    <span
      class="ouiProgress__valueText"
    >
      50%
    </span>
  </div>,
  <progress
    aria-hidden="false"
    aria-label="aria-label"
    class="ouiProgress ouiProgress--native ouiProgress--m ouiProgress--success testClass1 testClass2"
    data-test-subj="test subject string"
    max="100"
    value="50"
  />,
]
`;
